# tsl

./: .gitignore  .gitmodules  README.md  To_Do.txt  User_Guide.md  User_Guide.rtf
.circleci/: config.yml
tse/: CMakeLists.txt
tse/include/tse/: window.hpp
tse/include/tse/rendering/: tmesh.hpp
tse/shader/vertex/: geometry_large.glsl  geometry_xlarge.glsl
tse/src/: CMakeLists.txt  window.cpp
tse/src/rendering/: tmesh.cpp
tsl/: CMakeLists.txt
tsl/include/tsl/evaluation/: bsplines.tcc  surface_evaluator.hpp
tsl/include/tsl/geometry/tmesh/: half_edge.hpp  tmesh.hpp  vertex.hpp
tsl/include/tsl/io/: obj.hpp
tsl/src/: CMakeLists.txt
tsl/src/algorithm/: generator.cpp
tsl/src/evaluation/: surface_evaluator.cpp
tsl/src/geometry/: transform.cpp
tsl/src/geometry/tmesh/: tmesh.cpp
tsl/src/io/: obj.cpp
tsl/test/include/tsl_tests/evaluation/: surface_evaluator_fixtures.hpp
tsl/test/include/tsl_tests/geometry/tmesh/: tmesh_fixtures.hpp
tsl/test/include/tsl_tests/io/: obj_load.hpp
tsl/test/src/: CMakeLists.txt
tsl/test/src/evaluation/: bsplines_tests.cpp  surface_evaluator_fixtures.cpp  surface_evaluator_tests.cpp
tsl/test/src/geometry/tmesh/: tmesh_fixtures.cpp  tmesh_tests.cpp
tsl/test/src/io/: obj_load.cpp  obj_test.cpp
